- urpmi.addmedia:
  o --distrib: do not skip "debug_for=" media
    (debug media will be added with flag "ignore" if noauto=1)

Version 6.13 - 18 September 2008

- aria2: 
  o use new option --connect-timeout (need aria2 20080918 snapshot)
  o abort download after not finding a file on 3 servers
  o reduce from 16 to 8 servers for each file in metalink

Version 6.12 - 17 September 2008, Pascal "Pixel" Rigaux

- when using --bug,
  o copy /root/.rpmdrake too
  o copy updates descriptions too

Version 6.11 - 11 September 2008, Pascal "Pixel" Rigaux

- library:
  o create urpm::select::conflicting_packages_msg() for rpmdrake

Version 6.10 - 9 September 2008, Thierry Vignaud

- library:
  o enable rpmdrake to support --debug, --env, -q & -v options
  o fix urpm::download::sync() return value (used by rpmdrake) (#43639)

Version 6.9 - 9 September 2008, Pascal "Pixel" Rigaux

- urpmi
  o after installing in chroot, migrate back rpmdb db version to one
    compatible with the rpm in the chroot
  o fix orphans handling: an already installed pkg must not become
    "unrequested" because a new version of it is required
- fix display of downloaded urls with aria2 and metalinks
- fix handling --downloader when using mirrorlist (it was forcing aria2)

Version 6.8 - 4 September 2008, Pascal "Pixel" Rigaux

- fix proxy parameter for aria2
- remove rsync mirrors when calling aria2
- urpmi
  o enhance --bug: copy installed-through-deps.list in bug report
- gurpmi, gurpmi2:
  o silence perl warnings (ie remove "use warnings")
- library:
  o modify urpm::download::get_content() to work as non-superuser

Version 6.7 - 3 September 2008, Pascal "Pixel" Rigaux

- really call aria2 with --max-tries=1
  (it helps a lot when trying to download some files (eg: reconfig.urpmi))

Version 6.6 - 2 September 2008, Pascal "Pixel" Rigaux

- call aria2 with brand-new --uri-selector=adaptive

Version 6.5 - 1 September 2008, Pascal "Pixel" Rigaux

- all tools