@@ -1,6 +1,8 @@
 - urpmi.addmedia:
   o --distrib: do not skip "debug_for=" media
     (debug media will be added with flag "ignore" if noauto=1)
+  o for remote media, do not probe for media_info files in "./", do it only in
+    "media_info/"
 
 Version 6.13 - 18 September 2008
 
